--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
       "package": "com.render.rnmyproperty",
       "versionCode": 3,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.png",
+        "foregroundImage": "./assets/images/app_icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "config": {
@@ -36,9 +36,8 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
+          "image": "./assets/images/GlobalZamindarSplashScreen.png",
+          "resizeMode": "cover",
           "backgroundColor": "#ffffff"
         }
       ]
