--- a/app.json
+++ b/app.json
@@ -44,6 +44,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "016b9dac-d8b0-4103-8f39-64bec8cdd40a"
+      }
     }
   }
 }
