--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~52.0.27",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.4",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
